# M3Dock

./: CMakeLists.txt  LSHADE_Adam_final.sln  LSHADE_Adam_final.vcxproj  LSHADE_Adam_final.vcxproj.filters  Ligand.cpp  MODEA.cpp  MODEA.h  MOEAD.cpp  MOEAD.h  MPSOD.cpp  MPSOD.h  Protein.cpp  README.md  SD002319.pdbqt  SMPSO.cpp  SMPSO.h  SMoG2016.cpp  SMoG2016.h  aastd.h  ad4cache.cpp  ad4cache.h  adam_cal.h  atom.h  atom_base.h  atom_constants.h  basic.cpp  common.h  conf.h  coords.cpp  coords.h  dfire.h  dfire_misc.cc  energy.h  everything.cpp  everything.h  file_error.cpp  forcefiled.cpp  igrid.h  input.cpp  logp.cpp  (+40 more)
example/1qf1/: 1qf1_config.txt  1qf1_ligand.pdbqt  1qf1_ligand_1_out.pdbqt  1qf1_ligand_li.mol2  1qf1_protein.A.map  1qf1_protein.C.map  1qf1_protein.HD.map  1qf1_protein.N.map  1qf1_protein.OA.map  1qf1_protein.SA.map  1qf1_protein.d.map  1qf1_protein.e.map  1qf1_protein.glp  1qf1_protein.gpf  1qf1_protein.maps.fld  1qf1_protein.maps.xyz  1qf1_protein.pdbqt
example/2zda/: 2zda_config.txt  2zda_ligand.pdbqt  2zda_ligand_1_out.pdbqt  2zda_ligand_li.mol2  2zda_protein.A.map  2zda_protein.C.map  2zda_protein.HD.map  2zda_protein.N.map  2zda_protein.OA.map  2zda_protein.d.map  2zda_protein.e.map  2zda_protein.glp  2zda_protein.gpf  2zda_protein.maps.fld  2zda_protein.maps.xyz  2zda_protein.pdbqt
example/3acw/: 3acw_config.txt  3acw_ligand.pdbqt  3acw_ligand_1_out.pdbqt  3acw_ligand_li.mol2  3acw_protein.A.map  3acw_protein.C.map  3acw_protein.HD.map  3acw_protein.N.map  3acw_protein.OA.map  3acw_protein.d.map  3acw_protein.e.map  3acw_protein.glp  3acw_protein.gpf  3acw_protein.maps.fld  3acw_protein.maps.xyz  3acw_protein.pdbqt
lshade_nsga2/: __init__.py  atom.py  config.py  model.py  pdbqt.py  pipeline.py  types.py
lshade_nsga2/scoring/: __init__.py  precalculate.py  terms.py  weighted_terms.py
parameter/: AmberAtomTypes.txt
